# cmph

./: .clang-format  CMakeLists.txt  bench.cpp  main.cpp  readme.md
cmake/: benchmark.cmake
include/cmph/: cmph.hpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
